--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 <body>
     <!--Header-->
     <header id="header-main"> 
-        <img src=" images/logo.jpg" alt="Logo da nergiar" class="logo-principal">
-        <!--Título principal-->
+        <img src=" images/logo.jpg" alt="Logo da nergiar" class="logo-main">
+
         <h1 class="main-title">Energiar</h1>
+        
         <!--Link do whatsapp-->
-        <div class="whatsapp-contato">
+        <div class="whatsapp-contact">
 
             <a href="https://web.whatsapp.com/send?phone=5561996978834">
                 <p id="text-whatsapp">Faça seu orçamento</p>
@@ -59,7 +60,7 @@
           <div class="mySlides fade">
             <div class="slide-text">
               <h3 class="subtitle-slide">Projeto e instalação</h3>
-              <p class="slide-paragraph">Realizamos um projeto eficiente para sua empresa ou residência. </p>
+              <p class="slide-paragraph">Realizamos um projeto eficiente. </p>
             </div>
             <div class="numbertext">1 / 3</div>
             <img src="images/sala.jpeg" class="cards" >
@@ -97,7 +98,7 @@
        <h2 class="quem-somos">Quem somos?</h2>
        <h3 class="quem-somos">Somos a Energiar.</h3>
        <p>
-        A <strong>energiar</strong> surgiu após verificarmos a necessidade de profissionais bem qualificados e responsáveis, a ponto de sanar as necessidades dos clientes em um só lugar. Temos uma equipe bem qualificada, treinada para atender da melhor forma possível os nossos clientes. Temos profisionais na área de elétrica predial/residêncial, gesso e refrigeração. A nossa rede de clientes cresce cada dia mais, com indicações dos próprios clientes, fruto do nosso excelente trabalho. Para saber mais, entre em contato conosco!
+        A <strong>energiar</strong> surgiu após verificarmos a necessidade de profissionais bem qualificados e responsáveis, a ponto de sanar as necessidades dos clientes em um só lugar. Temos uma equipe bem qualificada, treinada para atender da melhor forma possível os nossos clientes. Temos profissionais na área de elétrica predial/residêncial, gesso e refrigeração. A nossa rede de clientes cresce cada dia mais, com indicações dos próprios clientes, fruto do nosso excelente trabalho. Para saber mais, entre em contato conosco!
        </p>
      </section>
 
@@ -129,20 +130,20 @@
         </div>
         <div id="social-media">
           <div id="contact-instagram">
-            <a href="https://instagram.com/energiar.bsb?igshid=YmMyMTA2M2Y="><img src="images/instagram.png" alt="instagram"></a>
+            <a href="https://instagram.com/energiar.bsb?igshid=YmMyMTA2M2Y="><img src="images/instagram.png" target="_blank" alt="instagram"></a>
           </div>
 
           <div id="contact-facebook">
-            <img src="images/facebook.png" alt="facebook">
+            <img src="images/facebook.png" target="_blank" alt="facebook">
           </div>
 
           <div id="contact-whatsapp">
-            <a href="https://web.whatsapp.com/send?phone=5561996978834"> <img src="images/whatsapp-icon.png" alt="whatsapp"> </a>
+            <a href="https://web.whatsapp.com/send?phone=5561996978834" target="_blank"> <img src="images/whatsapp-icon.png" alt="whatsapp"> </a>
           </div>
         </div>
 
         <div id="telephone">
-          <div id="telephone-call" ><img src="images/telefone.png" alt="telefone"></div>
+          <div id="telephone-call" ><img src="images/telefone.png" target="_blank" alt="telefone"></div>
           <p>61 996978834</p>
         </div>
     
